# timesheet

./: .gitignore  CMakeLists.txt  main.cpp
qml/: Main.qml
qml/components/: AddSchool.qml  GroupDetails.qml  SchoolDetails.qml  SchoolList.qml  TeacherDetails.qml  TeacherDetails.qml.autosave  TimetableDetails.qml
src/models/: classmodel.cpp  classmodel.h  lesson.cpp  lesson.h  lessonmodel.cpp  lessonmodel.h  room.cpp  room.h  roommodel.cpp  roommodel.h  school.cpp  school.h  schoolclass.cpp  schoolclass.h  schoolmodel.cpp  schoolmodel.h  teacher.cpp  teacher.h  teachermodel.cpp  teachermodel.h  timetablemodel.cpp  timetablemodel.h
src/storage/: schoolstorage.cpp  schoolstorage.h
